<?xml version="1.0"?>
<package format="2">
  <name>relay_control_plugin</name>
  <version>1.0.0</version>
  <description>Relay Control - RQT Plugin</description>

  <maintainer email="contact@cjt-robotics.de">CJT-Robotics</maintainer>

  <license>TODO</license>

  <url type="website">https://cjt-robotics.de</url>
  <url type="repository">https://github.com/CJT-Robotics/magnetometer_visualizer_plugin</url>

  <author email="markus.peltsarszky@gmail.com">Markus Peltsarszky</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>std_msgs</depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
